[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rootstock-sdk"
dynamic = ["version"]
description = "Python SDK for interacting with the Rootstock (RSK) blockchain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rootstock SDK Contributors" },
]
keywords = ["rootstock", "rsk", "blockchain", "bitcoin", "web3", "rbtc", "rns"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "web3>=7.0,<8.0",
    "eth-account>=0.13,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/rootstock/rootstock-python-sdk"
Repository = "https://github.com/rootstock/rootstock-python-sdk"
Issues = "https://github.com/rootstock/rootstock-python-sdk/issues"

[tool.hatch.version]
path = "src/rootstock/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rootstock"]

[tool.ruff]
line-length = 99
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rootstock"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests requiring a live testnet connection",
]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
]
